--- a/map/app/index.html
+++ b/map/app/index.html
@@ -24,6 +24,7 @@
             {{content-for "body"}}
 
    
+    <script src="http://web-app.usc.edu/maps/all_map_data.js"></script>
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="{{rootURL}}assets/map.js"></script>
